--- a/Menú.html
+++ b/Menú.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <header>
-        <h2><img src="C:\Users\nissy\Desktop\pag_web\Logo.jpg" width="200" height="200" alt="Logo"></h2>
+        <h2><img src="Logo.jpg" width="200" height="200" alt="Logo"></h2>
         <h1>Menú Principal</h1>
     </header>
     <nav>
