--- a/promo.html
+++ b/promo.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <header>
-        <h2><img src="C:\Users\nissy\Desktop\pag_web\Logo.jpg" width="200" height="200" alt="Logo"></h2>
+        <h2><img src="Logo.jpg" width="200" height="200" alt="Logo"></h2>
         <h1>Promo</h1>
     </header>
     <nav>
